# aeon-486-os

./: .gitignore  CMakeLists.txt  CMakePresets.json  baseimage.img  bootstrap.sh  bx_enh_dbg.ini  debug.sh  gdb.sh  grub.cfg  launch.json  launch.vs.json  make.sh  run.sh  runimg.sh  settings.bxrc  update_kernel.sh
boot/: CMakeLists.txt  boot.asm
cmake/: bochs.cmake  qemu.cmake  settings.bxrc.in
cmake/platform/: kernel-486.cmake
contrib/bootgrub/: bootgrub.txt
doc/: aeonfs.txt  crosscompiler.txt  ext2_floppy_creation.txt  hdd image.txt  mbr.txt  qemu.txt
kernel/: CMakeLists.txt  boot.s  kmodule.h  linker.ld  main.c  multiboot.h  script.ld
kernel/drivers/block/: ata.c  ata.h  fd.c
kernel/drivers/display/: display.c  display.h  textmode.c  textmode.h
kernel/fs/: file.cpp
kernel/fs/aeonfs/: design.txt
kernel/include/aeon/: console.h  ctype.h  file.h  file.hpp  memory.h  mutex.h  seek_direction.hpp  stdlib.h  string.h  types.h
kernel/lib/: ctype.c  hexdump.c  hexdump.h  memory.c  mutex.c  stdlib.c  string.c
kernel/memory/: memory.c  memory.h  paging.c  paging.h
kernel/platform/i386/: gdt.c  gdt.h  hal.c  hal.h  idt.c  idt.h  idt.s  irq.c  irq.h
klibc/: CMakeLists.txt
klibc/private/: ctype.c  memory.c  stdlib.c  string.c
klibc/public/klibc/: ctype.h  math.h  memory.h  stdbool.h  stddef.h  stdlib.h  string.h  types.h
